syntax = "proto3";
package schema.v2;

import "v2/document.proto" ;

message ProjectPdfImportRequest {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  string file = 3;
  repeated int32 succeed_pages = 4;
  repeated int32 failed_pages = 5;
}

message ProjectPdfImportResponse {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  Module module = 3;
  Status status = 4;
  int32 token_usage = 5;
  repeated core.Document documents = 6;
  string error_message = 7;
  repeated int32 succeed_pages = 8;
  repeated int32 failed_pages = 9;
  string language = 10;

  enum Module {
    PDF_TO_NATURAL_LANGUAGE = 0;
  }

  enum Status {
    SUCCEEDED = 0;
    INPROGRESS = 1;
    FAILED = 2;
  }
}
